# MAI-IMAS

./: .gitignore  README.md  requirements.txt  setup.sh
project/: README.md  crewai_flow.html  example.txt  output1.txt  output1_old.txt  output2.txt  plan.md  pyproject.toml  report.md
project/outputs/: output1-4o.txt  output2-4o.txt  output3-4o.txt  output3.txt
project/src/emergency/: crew.py  main.py
project/src/emergency/config/: agents.yaml  tasks.yaml
project/src/project/: main.py  output_medical_gpt3.5.txt
project/src/project/crews/emergency_crew/: emergency_crew.py
project/src/project/crews/emergency_crew/config/: agents.yaml  tasks.yaml
project/src/project/crews/fire_crew/: fire_crew.py  route_distance_tool.py
project/src/project/crews/fire_crew/config/: agents.yaml  tasks.yaml
project/src/project/crews/fire_crew/json_resources/: resources1.json
project/src/project/crews/fire_crew/resources/: resources1.json  simplified_resources1.json
project/src/project/crews/fire_crew/tests/: answer1.txt  test1.json  test2.json  test3.json  test4.json  unit_test1.json  unit_test2.json  unit_test3.json
project/src/project/crews/medical_crew/: medical_crew.py  medical_crew2.py
project/src/project/crews/reporter_crew/: reporter_crew.py
project/src/project/maps/: vilanova_i_la_geltru.graphml
project/src/project/tools/: ambulance_selector_tool.py  fire_crew_navigator_tool.py  hospital_selector_tool.py  route_distance_tool.py  route_navigator_tool.py
project/tests/: prompts.txt  test1.txt  test2.txt  test3.txt  test4.txt  wildfire_test.txt
(+16 files in other folders)
