[project]
name = "project"
version = "0.1.0"
description = "project using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.86.0,<1.0.0",
    "osmnx==2.0.1",
    "matplotlib",
    "scikit-learn",
]

[project.scripts]
kickoff = "project.main:kickoff"
plot = "project.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
